--- a/DataJuggler.Blazor.Components.csproj
+++ b/DataJuggler.Blazor.Components.csproj
@@ -33,7 +33,11 @@ http://circle.firchow.net/ by Andre Firchow, and his blog is here: http://fircho
     <RepositoryUrl>https://github.com/DataJuggler/DataJuggler.Blazor.Components.git</RepositoryUrl>
     <RepositoryType>Git - Git Hub</RepositoryType>
     <PackageTags>Blazor,C#,UI,Components,ProgressBar,Animation,BlazorStyled,ValidationComponent</PackageTags>
-    <PackageReleaseNotes>11.28.2022: I added the property Sender = this to the Grid when the Enter Key is pressed.
+    <PackageReleaseNotes>11.29.2022: I am attempting to have the grid go into edit mode in the same location as the cell being edited.
+
+11.28.2022: I added the property Sender = this to the Grid when the Enter Key is pressed.
+I also set the SetFocus part to be in a Try Catch in case it is able to trap the error caused by SetFocus
+if a control is not visible.
 
 11.21.2022: I added two properties to the Grid component:
 ExternalId - an Id such as a Table Id or other ways to identify how to save the data.
@@ -252,7 +256,7 @@ Now is the time to break anything.
 1.0.1 - I added a Sprite component.
 
 1.0.0 This is the first version I am releasing along with a Sample.</PackageReleaseNotes>
-    <Version>7.1.6</Version>
+    <Version>7.1.8</Version>
     <AssemblyVersion>2.0.0</AssemblyVersion>
     <FileVersion>2.0.0</FileVersion>
     <Nullable>disable</Nullable>
