Attempting to have Select All when the control gets the focus.

--- a/DataJuggler.Blazor.Components.csproj
+++ b/DataJuggler.Blazor.Components.csproj
@@ -33,7 +33,10 @@ http://circle.firchow.net/ by Andre Firchow, and his blog is here: http://fircho
     <RepositoryUrl>https://github.com/DataJuggler/DataJuggler.Blazor.Components.git</RepositoryUrl>
     <RepositoryType>Git - Git Hub</RepositoryType>
     <PackageTags>Blazor,C#,UI,Components,ProgressBar,Animation,BlazorStyled,ValidationComponent</PackageTags>
-    <PackageReleaseNotes>11.29.2022: I am attempting to have the grid go into edit mode in the same location as the cell being edited.
+    <PackageReleaseNotes>11.30.2022: I added some code to the validation component that should set focus to existing text when you
+set focus to the text in a textbox when you enter it. Not sure if I can make this a toggleable feature.
+
+11.29.2022: I am attempting to have the grid go into edit mode in the same location as the cell being edited.
 I am testing hitting Escape to have the grid exit edit mode. I have the grid exiting Edit Mode, but a call to
 the parent that displays the data seems necessary.
 
@@ -258,7 +261,7 @@ Now is the time to break anything.
 1.0.1 - I added a Sprite component.
 
 1.0.0 This is the first version I am releasing along with a Sample.</PackageReleaseNotes>
-    <Version>7.1.10</Version>
+    <Version>7.1.11</Version>
     <AssemblyVersion>2.0.0</AssemblyVersion>
     <FileVersion>2.0.0</FileVersion>
     <Nullable>disable</Nullable>
