--- a/DataJuggler.Blazor.Components.csproj
+++ b/DataJuggler.Blazor.Components.csproj
@@ -35,6 +35,7 @@ http://circle.firchow.net/ by Andre Firchow, and his blog is here: http://fircho
     <PackageTags>Blazor,C#,UI,Components,ProgressBar,Animation,BlazorStyled,ValidationComponent</PackageTags>
     <PackageReleaseNotes>11.30.2022: I added some code to the validation component that should set focus to existing text when you
 set focus to the text in a textbox when you enter it. Not sure if I can make this a toggleable feature.
+I also updated the way Escape is handled in the grid. 
 
 11.29.2022: I am attempting to have the grid go into edit mode in the same location as the cell being edited.
 I am testing hitting Escape to have the grid exit edit mode. I have the grid exiting Edit Mode, but a call to
@@ -261,9 +262,9 @@ Now is the time to break anything.
 1.0.1 - I added a Sprite component.
 
 1.0.0 This is the first version I am releasing along with a Sample.</PackageReleaseNotes>
-    <Version>7.1.11</Version>
-    <AssemblyVersion>2.0.0</AssemblyVersion>
-    <FileVersion>2.0.0</FileVersion>
+    <Version>7.1.12</Version>
+    <AssemblyVersion>7.1.12</AssemblyVersion>
+    <FileVersion>7.1.12</FileVersion>
     <Nullable>disable</Nullable>
     <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
