I increased the right and up amounts to move up and over when entering Edit Mode for the grid.

--- a/DataJuggler.Blazor.Components.csproj
+++ b/DataJuggler.Blazor.Components.csproj
@@ -35,7 +35,8 @@ http://circle.firchow.net/ by Andre Firchow, and his blog is here: http://fircho
     <PackageTags>Blazor,C#,UI,Components,ProgressBar,Animation,BlazorStyled,ValidationComponent</PackageTags>
     <PackageReleaseNotes>11.30.2022: I added some code to the validation component that should set focus to existing text when you
 set focus to the text in a textbox when you enter it. Not sure if I can make this a toggleable feature.
-I also updated the way Escape is handled in the grid. 
+I also updated the way Escape is handled in the grid. I also changed the CSS so the textbox appears inline
+at closer to the place where the read only display control was. Need to make this a parameter.
 
 11.29.2022: I am attempting to have the grid go into edit mode in the same location as the cell being edited.
 I am testing hitting Escape to have the grid exit edit mode. I have the grid exiting Edit Mode, but a call to
@@ -262,9 +263,9 @@ Now is the time to break anything.
 1.0.1 - I added a Sprite component.
 
 1.0.0 This is the first version I am releasing along with a Sample.</PackageReleaseNotes>
-    <Version>7.1.12</Version>
-    <AssemblyVersion>7.1.12</AssemblyVersion>
-    <FileVersion>7.1.12</FileVersion>
+    <Version>7.1.14</Version>
+    <AssemblyVersion>7.1.14</AssemblyVersion>
+    <FileVersion>7.1.14</FileVersion>
     <Nullable>disable</Nullable>
     <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
